feat: Add Our Story section and warmer background theme

--- a/index.html
+++ b/index.html
@@ -110,6 +110,38 @@
             </div>
         </section>
 
+        <section id="our-story" class="section">
+            <div class="container">
+                <div class="story-grid">
+                    <div class="story-image">
+                        <img src="assets/taylor-founder.jpg" alt="Taylor, Founder of Shiroboard">
+                    </div>
+                    <div class="story-content">
+                        <div class="story-header text-left-md">
+                            <h2>Our Story</h2>
+                        </div>
+                        <p>I’m Taylor, the founder of Shiroboard. I started this journey as a Music Technology lecturer
+                            who was drowning in a bottomless pile of administration. We all start with a vision of the
+                            classroom, the hum of creativity, the breakthrough moments, the high-energy debates.
+                            Somewhere between the endless stakeholder meetings, the pastoral care and the mounting pile
+                            of admin, that vision gets buried. The modern educator isn't just a teacher, they are a data
+                            entry clerk, a project manager, and a crisis counsellor all at once.</p>
+                        <p>The 'bottomless pile' doesn't just sit on your desk, it follows you home and I know this
+                            first hand. It’s the 40 open tabs on your laptop at 10:00 PM. It’s the Sunday night anxiety
+                            that has nothing to do with lesson plans and everything to do with paperwork. I realized
+                            that every minute we spend wrestling with fragmented systems is a minute stolen from our
+                            learners. When we are mentally checking boxes and tracking metrics across five different
+                            platforms, we aren't truly present.</p>
+                        <p>Teaching is a live performance. It requires our full attention, our empathy, and our
+                            expertise. I built Shiroboard because I was tired of seeing brilliant educators burn out
+                            before they could make their mark. I wanted to build a way back to the heart of the
+                            classroom.</p>
+                        <p><strong class="highlight-text">Let’s put the teacher back in the classroom.</strong></p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section id="features" class="section">
             <div class="container">
                 <div class="section-header">
